--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -2,6 +2,10 @@
 .align-item-end {
   align-items: flex-end;
 }
+
+.align-item-baseline {
+  align-items: baseline;
+}
 .align-center {
   align-items: center;
 }
@@ -40,7 +44,7 @@
   text-align: right;
 }
 
-.text-center{
+.text-center {
   text-align: center;
 }
 
@@ -349,13 +353,14 @@ div.limited-character.universal {
   }
 }
 
-.tooltip-info{
+.tooltip-info {
   left: auto;
   background: #ffffff;
   border: 1px solid #bbbbbb;
   margin-top: 0px;
 
-  .tooltip-info-header, .tooltip-info-body span{
+  .tooltip-info-header,
+  .tooltip-info-body span {
     padding: 0.5em;
   }
 
@@ -374,16 +379,18 @@ div.limited-character.universal {
     overflow-y: auto;
     span {
       display: block;
-      &:not(:last-child){
+      &:not(:last-child) {
         border-bottom: 1px solid #bbbbbb;
       }
     }
   }
 }
 
-.rfp-details-tbl .mat-row{
-  &:last-child, &:nth-last-child(2), &:nth-last-child(3){
-    .mat-column-Total-Supplier .tooltip-info{
+.rfp-details-tbl .mat-row {
+  &:last-child,
+  &:nth-last-child(2),
+  &:nth-last-child(3) {
+    .mat-column-Total-Supplier .tooltip-info {
       bottom: 10px;
     }
   }
@@ -848,7 +855,7 @@ td.mat-footer-cell:first-of-type {
 }
 
 @media only screen and (max-width: 330px) {
-  .info-tootip:hover .info-tootip__content{
+  .info-tootip:hover .info-tootip__content {
     left: 0px;
   }
 }
