global store changes with jira issues

--- a/src/app/features/grn/grn.component.html
+++ b/src/app/features/grn/grn.component.html
@@ -118,7 +118,7 @@
         <ng-container *ngIf="noProjectDataFound; else defaultImageMsg">
           <div class="wrapper-btn-center">
             <div class="report-image">
-              <p class="p-t-10 font-size-vary-grn">No GRN created for selected project.</p>
+              <p class="p-t-10 font-size-vary-grn">No Receipt created for selected project.</p>
             </div>
           </div>
         </ng-container>
