--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -1,45 +1,50 @@
 <div class="page-start-point">
-  <div class="p-l-10 p-r-20 p-b-20 min-height p-t-20 adjust-right-padding">
+  <div class="p-l-10 p-r-20 p-b-20 min-height p-t-10 adjust-right-padding">
+
+    <!-- If no material exists in global store -->
     <ng-container *ngIf="materialDataLength == 0 && projectWiseData.length == 0">
-      <div class="wrapper-btn-center">
-        <div class="add-user-img global-store-image">
-          <img src="../../../assets/images/global-store.png" alt="BuildSupply_Logo" />
-          <div>
-            <p>
-              You haven't added materials in any project <br />
-              Please add materials to continue.
-            </p>
-          </div>
-          <div>
-            <button mat-raised-button class="main-background-color main-button color-white" (click)="openBomDialog()">Add Material</button>
+      <div class="row">
+        <div class="col-md-4 offset-md-4">
+          <div class="gs-default-image text-center">
+            <img src="../../../assets/images/global-store.png" alt="BuildSupply_Logo" />
+            <p>You haven't added materials in any project <br />Please add materials to continue.</p>
+            <button mat-raised-button class="main-background-color main-button color-white"
+              (click)="openBomDialog()">Add Material</button>
           </div>
         </div>
       </div>
     </ng-container>
 
-    <ng-container>
-      <div class="row" *ngIf="materialDataLength > 0 || projectDataLength > 0">
-        <div class="col-md-6 col-sm-6 col-xs-6">
-          <a href="javascript:void(0)" (click)="setButtonName('materialWise')">
-            <button [class.active]="buttonName == 'materialWise'" class="color-black actv-btn" mat-button [ngClass]="isMobile ? 'p-rem-r-5 p-rem-r-5' : ''">All Materials</button>
-          </a>
+    <div class="row" *ngIf="materialDataLength > 0 || projectDataLength > 0">
+      <div class="col-md-6 col-sm-6 col-xs-6">
+        <a href="javascript:void(0)" (click)="setButtonName('materialWise')">
+          <button [class.active]="buttonName == 'materialWise'" class="color-black actv-btn" mat-button
+            [ngClass]="isMobile ? 'p-rem-r-5 p-rem-r-5' : ''">All Materials</button>
+        </a>
 
-          <a href="javascript:void(0)" (click)="setButtonName('projectWise')">
-            <button [class.active]="buttonName == 'projectWise'" class="color-black actv-btn" mat-button [ngClass]="isMobile ? 'p-rem-r-5 p-rem-r-5' : ''">Projects</button>
-          </a>
-        </div>
-        <div class="col-md-6 col-sm-6 col-xs-6 text-right">
-          <button mat-raised-button (click)="createRfq()" class="main-background-color main-button color-white m-r-10">Create RFP</button>
-          <button mat-raised-button (click)="createPo()" class="main-background-color main-button color-white">Create PO</button>
-        </div>
+        <a href="javascript:void(0)" (click)="setButtonName('projectWise')">
+          <button [class.active]="buttonName == 'projectWise'" class="color-black actv-btn" mat-button
+            [ngClass]="isMobile ? 'p-rem-r-5 p-rem-r-5' : ''">Projects</button>
+        </a>
       </div>
 
-      <div *ngIf="buttonName === 'materialWise'; else elseBlock">
-        <app-material-wise (materialDataLength)="materialShowDataLength($event)" [materialData]="globalStoreData"> </app-material-wise>
+      <div class="col-md-6 col-sm-6 col-xs-6 text-right">
+        <button mat-raised-button (click)="createRfq()" class="main-background-color main-button color-white m-r-10">Create RFP</button>
+        <button mat-raised-button (click)="createPo()" class="main-background-color main-button color-white">Create PO</button>
       </div>
-      <ng-template #elseBlock>
-        <app-project-wise *ngIf="projectWiseData.length" (projectDataLength)="projectShowDataLength($event)" [projectData]="projectWiseData"></app-project-wise>
-      </ng-template>
+    </div>
+
+    <!-- Material wise section -->
+    <ng-container *ngIf="buttonName === 'materialWise'; else elseBlock">
+      <app-material-wise (materialDataLength)="materialShowDataLength($event)" [materialData]="globalStoreData">
+      </app-material-wise>
     </ng-container>
+    
+    <!-- Project wise section -->
+    <ng-template #elseBlock>
+      <app-project-wise *ngIf="projectWiseData.length" (projectDataLength)="projectShowDataLength($event)"
+        [projectData]="projectWiseData"></app-project-wise>
+    </ng-template>
+    
   </div>
 </div>
