--- a/src/app/features/reports/ctc-report/ctc-report.component.html
+++ b/src/app/features/reports/ctc-report/ctc-report.component.html
@@ -35,6 +35,7 @@
               </div> -->
 
               <!-- <mat-option #allSelected (click)="toggleAllSelection(allSelected)" [value]="projectNumIds">Select All</mat-option> -->
+              
               <mat-option
                 *ngFor="let project of allProjectsList | SearchPipe: searchText:['projectName']"
                 [value]="project.projectId"
@@ -75,163 +76,157 @@
             Generate Report
           </button> -->
         </div>
-
-        <!-- <div class="col-md-12 add-project-btn display-flex justify-content-flex-end showResponsiveReport">
-          <div class="show-amount text-semi-bold main-color font-size-vary-grn cursor-pointer" #triggerBtn
-            [matMenuTriggerFor]="amount">
-            show amount
-          </div>
-        </div> -->
       </div>
 
-      <!-- <div class="row justify-content-flex-end">
-        <div class="col-md-12">
-          
-        </div>
-      </div> -->
-
       <!-- table For Showing Reports-->
-      <ng-container *ngIf="allProjectsData?.projectDataList?.length; else noDataAvailable">
-        <div class="reportTablePo ctc-report-tbl">
-          <p class="fontsize-14-px p-b-0 p-t-10 mb-1">*All the values are in base currency ({{ currency }})</p>
-          <!-- <p class="fontsize-14-px p-b-0">**All the values are inclusive of taxes.</p> -->
-          <table class="report-table">
-            <tr matSort class="mat-header-row ctc-header-row">
-              <th class="mat-header-cell">Materials</th>
-              <th class="mat-header-cell mat-unit-cell">Unit</th>
-              <th class="mat-header-cell text-right">
-                Estimated Amount <br />
-                <span *ngIf="selectedMenu !== 'Full Figures'">({{ selectedMenu === "Full Figures" ? "" : selectedMenu }})</span>
-              </th>
-              <th class="mat-header-cell text-right">
-                Awarded Amount <br />
-                <span *ngIf="selectedMenu !== 'Full Figures'">({{ selectedMenu === "Full Figures" ? "" : selectedMenu }})</span>
-              </th>
-              <th class="mat-header-cell text-right">
-                Delivered Amount <br />
-                <span *ngIf="selectedMenu !== 'Full Figures'">({{ selectedMenu === "Full Figures" ? "" : selectedMenu }})</span>
-              </th>
-              <th class="mat-header-cell text-right">
-                Paid Amount <br />
-                <span *ngIf="selectedMenu !== 'Full Figures'">({{ selectedMenu === "Full Figures" ? "" : selectedMenu }})</span>
-              </th>
-              <th class="mat-header-cell text-right projected-cost-col">
-                <span class="cell1">
-                  Projected Cost <span *ngIf="selectedMenu !== 'Full Figures'">({{ selectedMenu === "Full Figures" ? "" : selectedMenu }})</span>
-                </span>
-                <mat-icon matTooltip="(Quantity(Yet to be awarded) *Estimated Rate + Awarded Amount)" matTooltipPosition="above" class="ml-1" matTooltipClass="info-tooltip"
-                  >info</mat-icon>
-              </th>
-              <th class="mat-header-cell text-right balance-cost-col">
-                <span class="cell1">
-                  Balance Cost <span *ngIf="selectedMenu !== 'Full Figures'">({{ selectedMenu === "Full Figures" ? "" : selectedMenu }})</span>
-                </span>
-                <mat-icon matTooltip="(Projected Cost - Delivered Amount)" matTooltipPosition="above" class="ml-1" matTooltipClass="info-tooltip">info</mat-icon>
-              </th>
-            </tr>
-
-            <mat-accordion *ngFor="let project of allProjectsData.projectDataList">
-              <!-- Project List Data -->
-              <mat-expansion-panel>
-                <mat-expansion-panel-header class="bg-ctc-projects">
-                  <tr class="ctc-row">
-                    <td class="mat-cell">{{ project.projectName }}</td>
-                    <td class="mat-cell mat-unit-cell"></td>
-                    <td class="mat-cell text-right">
-                      {{ project.estimatedAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
-                    </td>
-                    <td class="mat-cell text-right">
-                      {{ project.awardedAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
-                    </td>
-                    <td class="mat-cell text-right">
-                      {{ project.deliveredAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
-                    </td>
-                    <td class="mat-cell text-right">
-                      {{ project.paidAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
-                    </td>
-                    <td class="mat-cell text-right">
-                      {{ project.projectedCost / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
-                    </td>
-                    <td class="mat-cell text-right">
-                      {{ (project.projectedCost - project.deliveredAmount) / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
-                    </td>
-                  </tr>
-                </mat-expansion-panel-header>
-
-                <!-- Material category details of specific project -->
-                <mat-expansion-panel *ngFor="let matCategory of project.materialCategoryDataList" [expanded]="true">
-                  <mat-expansion-panel-header class="bg-category">
+      <ng-container *ngIf="allProjectsData; else noDataAvailable">
+        <ng-container *ngIf="allProjectsData.projectDataList?.length; else noProjects">
+          <div class="reportTablePo ctc-report-tbl">
+            <p class="fontsize-14-px p-b-0 p-t-10 mb-1">*All the values are in base currency ({{ currency }})</p>
+            <!-- <p class="fontsize-14-px p-b-0">**All the values are inclusive of taxes.</p> -->
+            <table class="report-table">
+              <tr matSort class="mat-header-row ctc-header-row">
+                <th class="mat-header-cell">Materials</th>
+                <th class="mat-header-cell mat-unit-cell">Unit</th>
+                <th class="mat-header-cell text-right">
+                  Estimated Amount <br />
+                  <span *ngIf="selectedMenu !== 'Full Figures'">({{ selectedMenu === "Full Figures" ? "" : selectedMenu }})</span>
+                </th>
+                <th class="mat-header-cell text-right">
+                  Awarded Amount <br />
+                  <span *ngIf="selectedMenu !== 'Full Figures'">({{ selectedMenu === "Full Figures" ? "" : selectedMenu }})</span>
+                </th>
+                <th class="mat-header-cell text-right">
+                  Delivered Amount <br />
+                  <span *ngIf="selectedMenu !== 'Full Figures'">({{ selectedMenu === "Full Figures" ? "" : selectedMenu }})</span>
+                </th>
+                <th class="mat-header-cell text-right">
+                  Paid Amount <br />
+                  <span *ngIf="selectedMenu !== 'Full Figures'">({{ selectedMenu === "Full Figures" ? "" : selectedMenu }})</span>
+                </th>
+                <th class="mat-header-cell text-right projected-cost-col">
+                  <span class="cell1">
+                    Projected Cost <span *ngIf="selectedMenu !== 'Full Figures'">({{ selectedMenu === "Full Figures" ? "" : selectedMenu }})</span>
+                  </span>
+                  <mat-icon matTooltip="(Quantity(Yet to be awarded) *Estimated Rate + Awarded Amount)" matTooltipPosition="above" class="ml-1" matTooltipClass="info-tooltip"
+                    >info</mat-icon>
+                </th>
+                <th class="mat-header-cell text-right balance-cost-col">
+                  <span class="cell1">
+                    Balance Cost <span *ngIf="selectedMenu !== 'Full Figures'">({{ selectedMenu === "Full Figures" ? "" : selectedMenu }})</span>
+                  </span>
+                  <mat-icon matTooltip="(Projected Cost - Delivered Amount)" matTooltipPosition="above" class="ml-1" matTooltipClass="info-tooltip">info</mat-icon>
+                </th>
+              </tr>
+  
+              <mat-accordion *ngFor="let project of allProjectsData.projectDataList">
+                <!-- Project List Data -->
+                <mat-expansion-panel>
+                  <mat-expansion-panel-header class="bg-ctc-projects">
                     <tr class="ctc-row">
-                      <td class="mat-cell">{{ matCategory.materialCategoryName }}</td>
+                      <td class="mat-cell">{{ project.projectName }}</td>
                       <td class="mat-cell mat-unit-cell"></td>
                       <td class="mat-cell text-right">
-                        {{ matCategory.estimatedAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                        {{ project.estimatedAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
                       </td>
                       <td class="mat-cell text-right">
-                        {{ matCategory.awardedAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                        {{ project.awardedAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
                       </td>
                       <td class="mat-cell text-right">
-                        {{ matCategory.deliveredAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
-                      </td>
-                      <td class="mat-cell"></td>
-                      <td class="mat-cell text-right">
-                        {{ matCategory.projectedCost / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                        {{ project.deliveredAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
                       </td>
                       <td class="mat-cell text-right">
-                        {{ (matCategory.projectedCost - matCategory.deliveredAmount) / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                        {{ project.paidAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                      </td>
+                      <td class="mat-cell text-right">
+                        {{ project.projectedCost / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                      </td>
+                      <td class="mat-cell text-right">
+                        {{ (project.projectedCost - project.deliveredAmount) / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
                       </td>
                     </tr>
                   </mat-expansion-panel-header>
-
-                  <!-- material details of specific material category -->
-                  <tr class="ctc-row bg-project-list" *ngFor="let material of matCategory.materialCTCDataList">
-                    <td class="mat-cell">{{ material.materialName }}</td>
-                    <td class="mat-cell mat-unit-cell">{{ material.materialUnit }}</td>
-                    <td class="mat-cell text-right">
-                      {{ material.estimatedAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
-                    </td>
-                    <td class="mat-cell text-right">
-                      {{ material.awardedAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
-                    </td>
-                    <td class="mat-cell text-right">
-                      {{ material.deliveredAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
-                    </td>
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell text-right">
-                      {{ material.projectedCTC / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
-                    </td>
-                    <td class="mat-cell text-right">
-                      {{ (material.projectedCTC - material.deliveredAmount) / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
-                    </td>
-                  </tr>
+  
+                  <!-- Material category details of specific project -->
+                  <mat-expansion-panel *ngFor="let matCategory of project.materialCategoryDataList" [expanded]="true">
+                    <mat-expansion-panel-header class="bg-category">
+                      <tr class="ctc-row">
+                        <td class="mat-cell">{{ matCategory.materialCategoryName }}</td>
+                        <td class="mat-cell mat-unit-cell"></td>
+                        <td class="mat-cell text-right">
+                          {{ matCategory.estimatedAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                        </td>
+                        <td class="mat-cell text-right">
+                          {{ matCategory.awardedAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                        </td>
+                        <td class="mat-cell text-right">
+                          {{ matCategory.deliveredAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                        </td>
+                        <td class="mat-cell"></td>
+                        <td class="mat-cell text-right">
+                          {{ matCategory.projectedCost / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                        </td>
+                        <td class="mat-cell text-right">
+                          {{ (matCategory.projectedCost - matCategory.deliveredAmount) / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                        </td>
+                      </tr>
+                    </mat-expansion-panel-header>
+  
+                    <!-- material details of specific material category -->
+                    <tr class="ctc-row bg-project-list" *ngFor="let material of matCategory.materialCTCDataList">
+                      <td class="mat-cell">{{ material.materialName }}</td>
+                      <td class="mat-cell mat-unit-cell">{{ material.materialUnit }}</td>
+                      <td class="mat-cell text-right">
+                        {{ material.estimatedAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                      </td>
+                      <td class="mat-cell text-right">
+                        {{ material.awardedAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                      </td>
+                      <td class="mat-cell text-right">
+                        {{ material.deliveredAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                      </td>
+                      <td class="mat-cell"></td>
+                      <td class="mat-cell text-right">
+                        {{ material.projectedCTC / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                      </td>
+                      <td class="mat-cell text-right">
+                        {{ (material.projectedCTC - material.deliveredAmount) / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                      </td>
+                    </tr>
+                  </mat-expansion-panel>
                 </mat-expansion-panel>
-              </mat-expansion-panel>
-            </mat-accordion>
+              </mat-accordion>
+  
+              <!-- Total Amount Footer -->
+              <tr class="ctc-row bg-ctc-total-amount">
+                <td class="mat-cell">Total Amount</td>
+                <td class="mat-cell mat-unit-cell"></td>
+                <td class="mat-cell text-right">
+                  {{ allProjectsData.estimatedAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                </td>
+                <td class="mat-cell text-right">{{ allProjectsData.awardedAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}</td>
+                <td class="mat-cell text-right">
+                  {{ allProjectsData.deliveredAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                </td>
+                <td class="mat-cell text-right">
+                  {{ allProjectsData.paidAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                </td>
+                <td class="mat-cell text-right">
+                  {{ allProjectsData.projectedCost / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                </td>
+                <td class="mat-cell text-right">
+                  {{ (allProjectsData.projectedCost - allProjectsData.deliveredAmount) / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+                </td>
+              </tr>
+            </table>
+          </div>
+        </ng-container>
 
-            <!-- Total Amount Footer -->
-            <tr class="ctc-row bg-ctc-total-amount">
-              <td class="mat-cell">Total Amount</td>
-              <td class="mat-cell mat-unit-cell"></td>
-              <td class="mat-cell text-right">
-                {{ allProjectsData.estimatedAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
-              </td>
-              <td class="mat-cell text-right">{{ allProjectsData.awardedAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}</td>
-              <td class="mat-cell text-right">
-                {{ allProjectsData.deliveredAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
-              </td>
-              <td class="mat-cell text-right">
-                {{ allProjectsData.paidAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
-              </td>
-              <td class="mat-cell text-right">
-                {{ allProjectsData.projectedCost / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
-              </td>
-              <td class="mat-cell text-right">
-                {{ (allProjectsData.projectedCost - allProjectsData.deliveredAmount) / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
-              </td>
-            </tr>
-          </table>
-        </div>
+        <ng-template #noProjects>
+          <div class="center-element font-16-px">No CTC reports available for this project</div>
+        </ng-template>
       </ng-container>
+      
 
       <!-- Report Default Image If No data is Present -->
       <ng-template #noDataAvailable>
