--- a/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
+++ b/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
@@ -12,7 +12,7 @@
         <div class="row p-b-10">
           <div class="col-xs-12">
             <mat-form-field class="border-input add-supplier-name width-100">
-              <input matInput type="text" formControlName="supplier_name" placeholder="Supplier Name *" />
+              <input matInput type="text" formControlName="supplierName" placeholder="Supplier Name *" />
               <mat-error class="form-error-msg p-t-10">Supplier name is Required</mat-error>
             </mat-form-field>
           </div>
@@ -68,13 +68,13 @@
             <div class="col-xs-8 col-md-10">
               <mat-form-field class="border-input width-100">
                 <ng-container *ngIf="isNational; else nonInt">
-                  <input matInput type="text" formControlName="contact_no" placeholder="Phone No. *" />
-                  <small *ngIf="form.controls['contact_no'].hasError('required') && form.controls['contact_no'].touched" class="form-error-msg"> Phone No is required </small>
-                  <small *ngIf="form.controls['contact_no'].hasError('pattern') && form.controls['contact_no'].touched" class="form-error-msg"> Enter Valid Phone No</small>
+                  <input matInput type="text" formControlName="contactNo" placeholder="Phone No. *" />
+                  <small *ngIf="form.controls['contactNo'].hasError('required') && form.controls['contactNo'].touched" class="form-error-msg"> Phone No is required </small>
+                  <small *ngIf="form.controls['contactNo'].hasError('pattern') && form.controls['contactNo'].touched" class="form-error-msg"> Enter Valid Phone No</small>
                 </ng-container>
                 <ng-template #nonInt>
-                  <input matInput type="text" formControlName="contact_no" placeholder="Phone No." />
-                  <small *ngIf="form.controls['contact_no'].hasError('pattern') && form.controls['contact_no'].touched" class="form-error-msg"> Enter Valid Phone No</small>
+                  <input matInput type="text" formControlName="contactNo" placeholder="Phone No." />
+                  <small *ngIf="form.controls['contactNo'].hasError('pattern') && form.controls['contactNo'].touched" class="form-error-msg"> Enter Valid Phone No</small>
                 </ng-template>
               </mat-form-field>
             </div>
