--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -37,6 +37,7 @@
 @import "./pages/tax-othercost.scss";
 @import "./pages/receipt.scss";
 @import "./pages/my-material.scss";
+@import "./pages/global-store";
 
 ::ng-deep .mat-horizontal-stepper-header {
   pointer-events: none !important;
