--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -782,7 +782,7 @@ td.mat-footer-cell:first-of-type {
 
 @media only screen and (max-width: 959px) {
   .adjust-right-padding {
-    padding: 0 10px;
+    padding: 0 10px !important;
   }
 }
 
