--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -763,6 +763,10 @@ td.mat-footer-cell:first-of-type {
   padding-left: 16px !important;
 }
 
+.mat-header-cell, .mat-cell{
+  border-bottom: none !important;
+}
+
 .mat-row {
   .mat-cell {
     color: #545454;
@@ -806,6 +810,15 @@ td.mat-footer-cell:first-of-type {
   thead tr.mat-row {
     height: 45px !important;
   }
+
+  .mat-header-cell, .mat-cell {
+    font-size: 12px;
+  }
+
+  .add-user-style .mat-expansion-panel-header-title {
+    font-size: 13.5px;
+  }
+
 }
 
 @media only screen and (max-width: 600px) {
