--- a/src/assets/scss/pages/users.scss
+++ b/src/assets/scss/pages/users.scss
@@ -107,6 +107,14 @@
     max-width: 400px;
     min-width: 400px !important;
   }
+
+  .mat-cell{
+    white-space: normal !important;
+  }
+
+  .mat-row{
+    border-bottom: 1px solid #bbbbbb;
+  }
 }
 
 .add-user-details-button-right {
@@ -554,6 +562,28 @@
   min-width: 200px;
 }
 
+@media only screen and (max-width: 1199px){
+  .add-user-container{
+    .mat-header-cell, .mat-cell {
+      &:first-child {
+        min-width: 180px;
+      }
+
+      &:nth-child(3){
+        min-width: 150px;
+      }
+
+      &:nth-child(4) {
+        min-width: 200px;
+      }
+
+      &:nth-child(5) {
+        min-width: 100px;
+      }
+    }
+  }
+}
+
 @media only screen and (max-width: 1010px) {
   .terms-margin-set-width {
     margin-left:0px;
@@ -569,18 +599,24 @@
       padding-top: 20px;
     }
    }
- }
-
+}
+ 
+@media only screen and (max-width : 900px){
+  .raise-indent-table{
+    .mat-table .mat-cell{
+      height: 58px !important;
+    }
+  }
+}
+  
 @media only screen and (max-width: 768px){
   .float-right-invite-delBtn{
     float: right;
   }
 }
 
-@media only screen and (max-width : 900px){
-  .raise-indent-table{
-    .mat-table .mat-cell{
-        height: 58px !important;
-    }
+@media only screen and (max-width: 599px){
+  .more-projects-list .material-icons{
+    font-size: 20px;
   }
 }
