view rfp page responsiveness

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -39,6 +39,7 @@
 @import "./pages/error.scss";
 @import "./pages/my-material.scss";
 @import "./pages/global-store";
+@import "./pages/rfq-view";
 
 ::ng-deep .mat-horizontal-stepper-header {
   pointer-events: none !important;
