--- a/src/assets/scss/pages/rfq-bids.component.scss
+++ b/src/assets/scss/pages/rfq-bids.component.scss
@@ -185,7 +185,7 @@
   margin-bottom: 0;
 }
 
-.rfq-final-step, .rfq-view-step{
+.rfq-final-step{
   width: 100%;
   tr.mat-footer-row, tr.mat-row{
     height: 66px;
